Replaces deprecated new Integer with Integer.valueOf
Change-Id: I9d489f953ff770bb69de6e6ed5b55efc7fe2cc18
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>